@@ -4,11 +4,11 @@ MooseX::BuildArgs - Save the original constructor arguments for later use.
 
 =head1 SYNOPSIS
 
-Create a class that consumes the MooseX::BuildArgs role:
+Create a class that uses this module:
 
     package MyClass;
     use Moose;
-    with 'MooseX::BuildArgs';
+    use MooseX::BuildArgs;
     has foo => ( is=>'ro', isa=>'Str' );
 
 Then whenever an instance of this class is created all arguments to the
@@ -21,11 +21,11 @@ constructor are saved in the build_args attribute:
 =head1 DESCRIPTION
 
 Sometimes it is very useful to have access the the contructor arguments before builders,
-defaults, and coercion take affect.  This L<Moose> role provides a build_args hashref
-attribute for all instances of the consuming class.  The build_args attribute contains
-all arguments that were passed to the constructor.
+defaults, and coercion take affect.  This module provides a build_args hashref attribute
+for all instances of the consuming class.  The build_args attribute contains all arguments
+that were passed to the constructor.
 
-An typical case for this module would be for creating a clone of an object, so you could
+A typical case for this module would be for creating a clone of an object, so you could
 duplicate an object with the following code:
 
     my $obj1 = MyClass->new( foo => 32 );
